<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scorecard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_game">Scoreboard</string>
    <string name="title_activity_start_fresh_game">New Game</string>
    <string name="title_activity_current_game_scorecard">Scorecard</string>
    <string name="title_activity_game_history">History</string>
    <string name="title_activity_game_details">Game Details</string>
    <string name="title_activity_game_continuity">Game Continuity</string>
    <string name="clear_history"> Clear All</string>
    <string name="refresh_history">Refresh</string>
    <string name="end_game"> End Game</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete_items">Delete</string>
    <string name="player_remove_button">Remove</string>
    <string name="maximum_score_label">Maximum Score :</string>
    <string name="limit_score_button">Submit</string>
    <string name="welcome_message">Welcome to Scorecard</string>
    <string name="new_game_button">New Game</string>
    <string name="history_button">  History  </string>
    <string name="game_name_label">Game Name</string>
    <string name="enter_game_name">Enter Game Name</string>
    <string name="winning_mode_label">Winning Mode</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="add">ADD</string>
    <string name="done">Done</string>
    <string name="resume_game_button">Resume Game</string>
    <string name="heading_hint">Heading</string>
    <string name="current_round_hint">Current Round</string>
    <string name="show_limit_hint">Show Limit</string>
    <string name="update_score_button">Update Score</string>
    <string name="view_details_button">View Details</string>
    <string name="player_name_label">Player\nName</string>
    <string name="enter_score_label">Current\nScore</string>
    <string name="previous_score_label">Previous\nScore</string>
    <string name="total_score_label">Total\nScore</string>
    <string name="clone_game">Clone Game</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="history_content_string">You haven\'t played any games yet.</string>
    <string name="search_content_string">No matche(s) found</string>
    <string name="action_home">Home</string>
    <string name="action_history"> History</string>
    <string name="about"> About </string>
    <string name="title_activity_about_game">About Scorecard</string>
    <string name="about_content"> hjsdgalkjdlhgjkrthgktrj </string>
    <string name="help"> Help </string>
    <string name="title_activity_help">Help</string>

</resources>

