<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".startupScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"
        android:id="@+id/newGame"
        android:textColor="#FFFFFF"
        android:padding="7dp"
        android:background="@drawable/mybuttonstyle"
        android:layout_above="@+id/history"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:text="@string/history_button"
        android:id="@+id/history"
        android:padding="7dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:background="@drawable/mybuttonstyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
